@@ -252,6 +252,7 @@ libc_feholdsetround_aarch64_ctx (struct rm_ctx *ctx, int r)
   int round;
 
   _FPU_GETCW (fpcr);
+  ctx->env.__fpcr = fpcr;
 
   /* Check whether rounding modes are different.  */
   round = (fpcr ^ r) & _FPU_FPCR_RM_MASK;
@@ -259,10 +260,7 @@ libc_feholdsetround_aarch64_ctx (struct rm_ctx *ctx, int r)
 
   /* Set the rounding mode if changed.  */
   if (__glibc_unlikely (round != 0))
-    {
-      ctx->env.__fpcr = fpcr;
-      _FPU_SETCW (fpcr ^ round);
-    }
+    _FPU_SETCW (fpcr ^ round);
 }
 
 #define libc_feholdsetround_ctx		libc_feholdsetround_aarch64_ctx
@@ -290,6 +288,7 @@ libc_feholdsetround_noex_aarch64_ctx (struct rm_ctx *ctx, int r)
 
   _FPU_GETCW (fpcr);
   _FPU_GETFPSR (fpsr);
+  ctx->env.__fpcr = fpcr;
   ctx->env.__fpsr = fpsr;
 
   /* Check whether rounding modes are different.  */
@@ -298,10 +297,7 @@ libc_feholdsetround_noex_aarch64_ctx (struct rm_ctx *ctx, int r)
 
   /* Set the rounding mode if changed.  */
   if (__glibc_unlikely (round != 0))
-    {
-      ctx->env.__fpcr = fpcr;
-      _FPU_SETCW (fpcr ^ round);
-    }
+    _FPU_SETCW (fpcr ^ round);
 }
 
 #define libc_feholdsetround_noex_ctx	libc_feholdsetround_noex_aarch64_ctx
